# discord-bot

./: .gitignore  README.md  bot.py  pyproject.toml  requirements.txt  temp.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflow/: pr-check.yml
.github/workflows/: ci.yml  main.yml  pr-check.yml
cogs/: control.py  dict_query.py  event_reminder.py  mark_accent.py  mark_furigana.py  mark_text.py  meeting_reminder.py  ping.py  task_reminder.py  usage_query.py
config/: googlesheet.py  settings.py
core/: bot_core.py  context_menu.py  events.py
utils/: api.py
