[project]
name = "discord-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.1",
    "apscheduler>=3.10.4",
    "discord-py>=2.0.0",
    "pillow==11.3.0",
    "python-dotenv>=1.1.1",
    "requests==2.32.5",
]
