[project]
name = "discord-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.1",
    "apscheduler==3.11.0",
    "discord-py>=2.6.0",
    "google-api-python-client>=2.185.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "gspread-asyncio>=2.0.0",
    "pillow==11.3.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pyyaml>=6.0.3",
    "ruff>=0.14.2",
    "toml>=0.10.2",
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "N"]

[tool.mypy]
strict = true
namespace_packages = true
warn_unused_ignores = false
ignore_missing_imports = true
